--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Amna Sabahat",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs": "^3.21.0",
+    "@tensorflow/tfjs-node": "^3.21.1",
     "@types/node": "^22.13.11",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -18,14 +19,14 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "fuse.js": "^7.1.0",
     "haversine-distance": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.3",
+    "mongoose": "^8.16.4",
     "nodemon": "^3.1.9"
   },
   "keywords": [],
